--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --port=4200  --proxy-config proxy.conf.json",
-    "build": "ng build --prod",
+    "build": "ng build --environment=prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "android": "ionic cordova build android --release",
     "android-debbger": "ionic cordova build android",
-    "resources": "ionic cordova resources android",
-    "add": "ionic cordova platform add android",
-    "prod": "npm run lint & ionic cordova build android --release --prod"
+    "add-android": "ionic cordova platform add android",
+    "android-prod": "npm run lint & ionic cordova build android --prod",
+    "add-ios": "cordova platform add ios",
+    "build-ios": "ionic cordova build ios"
   },
   "private": true,
   "dependencies": {
@@ -25,15 +26,13 @@
     "@angular/platform-browser": "~6.1.1",
     "@angular/platform-browser-dynamic": "~6.1.1",
     "@angular/router": "~6.1.1",
-    "@ionic-native/background-geolocation": "^5.0.0-beta.21",
-    "@ionic-native/battery-status": "^5.0.0-beta.21",
-    "@ionic-native/camera": "^5.0.0-beta.21",
     "@ionic-native/core": "5.0.0-beta.21",
     "@ionic-native/photo-library": "^4.16.0",
     "@ionic-native/splash-screen": "5.0.0-beta.21",
     "@ionic-native/status-bar": "5.0.0-beta.21",
     "@ionic/angular": "4.0.0-beta.13",
     "cordova-android": "7.1.1",
+    "cordova-ios": "^4.5.5",
     "core-js": "^2.5.3",
     "rxjs": "6.2.2",
     "zone.js": "^0.8.26"
@@ -67,7 +66,8 @@
   "description": "An Ionic project",
   "cordova": {
     "platforms": [
-      "android"
+      "android",
+      "ios"
     ]
   }
 }
